codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__cascade_slash_command_proactive.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2885
expression: rendered
---
• Cascade: proactive Use /cascade off to require an explicit delegation request.
